Fix Layout Issue in Filetype Manager

--- a/indico/modules/events/editing/client/js/components/FileTypeManager.module.scss
+++ b/indico/modules/events/editing/client/js/components/FileTypeManager.module.scss
@@ -11,43 +11,25 @@
     max-width: 300px !important;
 
     .filetype-segment {
-        .actions {
-            display: flex;
 
-            i {
-                cursor: pointer;
-            }
-
-            .disabled {
-                cursor: auto;
-            }
-        }
-
-        .filetype {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        .filetype-header {
+            width: 85%;
 
             h3 {
                 margin-bottom: 0;
                 display: flex;
-                align-items: center;
 
                 .name {
-                    margin-right: 0.5em;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
                 }
-            }
-
-            .options {
-                margin-top: 0.5em;
-                color: $black;
             }
         }
 
         .file-extensions {
             font-style: italic;
             color: $gray;
-            list-style-type: none;
             margin: 0.2em 0;
             padding: 0;
 
